# rules_vivado

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yml  docs.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md  toolchains.md
tests/: BUILD.bazel
tools/bzl_version/: version_test.py
vivado/: BUILD.bazel  bitstream.bzl  block_design.bzl  create_interface_ip.tcl.template  defs.bzl  flow.bzl  implementation.bzl  ip.bzl  packaged_ip.bzl  project.bzl  providers.bzl  simulation.bzl  synthesis.bzl
vivado/private/: BUILD.bazel  common.bzl  compile_simlib.tcl.template  create_bd.tcl.template  create_interface_ip.tcl.template  create_ip_block.tcl.template  create_project.tcl.template  create_xci.tcl.template  export_simulation.tcl.template  interface_setup.tcl.template  place_optimize.tcl.template  placement.tcl.template  route.tcl.template  synth_optimize.tcl.template  write_bitstream.tcl.template  write_device_image.tcl.template  xsim_test_wrapper.sh.template
vivado/tests/: BUILD.bazel  assert_detection_tb.sv  stream_fifo.sv  stream_fifo_tb.sv  weights_replay.sv  weights_replay_test.cc
