load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "vivado_toolchain_doc",
    out = "src/vivado_toolchain.md",
    input = "//vivado:toolchain.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_providers_doc",
    out = "src/vivado_providers.md",
    input = "//vivado:providers.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_synthesis_doc",
    out = "src/vivado_synthesis.md",
    input = "//vivado:synthesis.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_implementation_doc",
    out = "src/vivado_implementation.md",
    input = "//vivado:implementation.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_bitstream_doc",
    out = "src/vivado_bitstream.md",
    input = "//vivado:bitstream.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_project_doc",
    out = "src/vivado_project.md",
    input = "//vivado:project.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_ip_doc",
    out = "src/vivado_ip.md",
    input = "//vivado:ip.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

stardoc(
    name = "vivado_simulation_doc",
    out = "src/vivado_simulation.md",
    input = "//vivado:simulation.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vivado:bzl_lib"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":vivado_bitstream_doc",
        ":vivado_implementation_doc",
        ":vivado_ip_doc",
        ":vivado_project_doc",
        ":vivado_providers_doc",
        ":vivado_simulation_doc",
        ":vivado_synthesis_doc",
        ":vivado_toolchain_doc",
    ],
    book = "book.toml",
    # Windows builds are typically super slow in CI so they're avoided.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

alias(
    name = "docs",
    actual = ":book",
    tags = ["manual"],
)

mdbook_server(
    name = "server",
    book = ":book",
    tags = ["manual"],
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
    tags = ["manual"],
)
